# Senior-Project-Fall-2022

./: .gitignore  .pylintrc  Pipfile  README.md  detectEyes.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: action.yml  lint.yml
IrisSoftware/: UI.py  camera.py  computeScreenCoords.py  detectEyes.py  main.py  settings.py  ui.py  widgets.py
src/: Camera.py  computeScreenCoords.py  detectEyes.py  main.py  ui.py
src/ui/: UI.py  __init__.py  main.py  runners.py  widgets.py
