[tool.poetry]
name = "IrisSoftware"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "IrisSoftware"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PySide6 = "^6.3.2"
opencv-python = "^4.6.0.66"
PyAutoGUI = "^0.9.53"
numpy = "^1.23.3"
scipy = "^1.9.1"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
qimage2ndarray = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
